{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 32,
  "lineage": "b175ba64-4588-7375-28c2-112b1a0d1536",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090b2c01a2597d5c2",
            "arn": "arn:aws:ec2:us-west-2:178795995292:elastic-ip/eipalloc-090b2c01a2597d5c2",
            "domain": "vpc",
            "id": "eipalloc-090b2c01a2597d5c2",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-245-239-67.us-west-2.compute.amazonaws.com",
            "public_ip": "54.245.239.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-1"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03654f9f00d4c3ca3",
            "arn": "arn:aws:ec2:us-west-2:178795995292:elastic-ip/eipalloc-03654f9f00d4c3ca3",
            "domain": "vpc",
            "id": "eipalloc-03654f9f00d4c3ca3",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-253-207-16.us-west-2.compute.amazonaws.com",
            "public_ip": "44.253.207.16",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9a08e4148951906",
            "arn": "arn:aws:ec2:us-west-2:178795995292:elastic-ip/eipalloc-0a9a08e4148951906",
            "domain": "vpc",
            "id": "eipalloc-0a9a08e4148951906",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-238-132-99.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.132.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "lesson-5-vpc-nat-eip-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-eip-3"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:internet-gateway/igw-0203db52bb2dfd913",
            "id": "igw-0203db52bb2dfd913",
            "owner_id": "178795995292",
            "tags": {
              "Name": "lesson-5-vpc-igw"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-igw"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090b2c01a2597d5c2",
            "association_id": "eipassoc-08f0624efecac95fb",
            "connectivity_type": "public",
            "id": "nat-0a8a9c29b075e33d3",
            "network_interface_id": "eni-0385d093f0dba7e5d",
            "private_ip": "10.0.1.249",
            "public_ip": "54.245.239.67",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09e7f8b5eb0d9a230",
            "tags": {
              "Name": "lesson-5-vpc-nat-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03654f9f00d4c3ca3",
            "association_id": "eipassoc-04e763a5683715048",
            "connectivity_type": "public",
            "id": "nat-0fdc81ecf34d3628c",
            "network_interface_id": "eni-0230d48c21d85542e",
            "private_ip": "10.0.2.75",
            "public_ip": "44.253.207.16",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0196f65f292f46f6e",
            "tags": {
              "Name": "lesson-5-vpc-nat-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9a08e4148951906",
            "association_id": "eipassoc-03e342c27ee014e43",
            "connectivity_type": "public",
            "id": "nat-02fadc436ec5d71a3",
            "network_interface_id": "eni-0b84e90e99de642b6",
            "private_ip": "10.0.3.127",
            "public_ip": "44.238.132.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0601b6978f0b90c55",
            "tags": {
              "Name": "lesson-5-vpc-nat-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-nat-3"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:route-table/rtb-0ce55f7768bbcb1a8",
            "id": "rtb-0ce55f7768bbcb1a8",
            "owner_id": "178795995292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a8a9c29b075e33d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:route-table/rtb-06d02863c13ed571c",
            "id": "rtb-06d02863c13ed571c",
            "owner_id": "178795995292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fdc81ecf34d3628c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:route-table/rtb-0d88cd3d62b970f32",
            "id": "rtb-0d88cd3d62b970f32",
            "owner_id": "178795995292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02fadc436ec5d71a3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-rt-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:route-table/rtb-033ee147990404ff9",
            "id": "rtb-033ee147990404ff9",
            "owner_id": "178795995292",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0203db52bb2dfd913",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073219eb026c8e26b",
            "route_table_id": "rtb-0ce55f7768bbcb1a8",
            "subnet_id": "subnet-0928ef52d1a8c1427"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f18b585167bda93",
            "route_table_id": "rtb-06d02863c13ed571c",
            "subnet_id": "subnet-0b64ae3fc8fcf188a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faf78522b081f8c3",
            "route_table_id": "rtb-0d88cd3d62b970f32",
            "subnet_id": "subnet-0b3d3971453ab5de6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0154c30455e9d0d34",
            "route_table_id": "rtb-033ee147990404ff9",
            "subnet_id": "subnet-09e7f8b5eb0d9a230"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00580409e64a976f3",
            "route_table_id": "rtb-033ee147990404ff9",
            "subnet_id": "subnet-0196f65f292f46f6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fc3bccdea87fb67",
            "route_table_id": "rtb-033ee147990404ff9",
            "subnet_id": "subnet-0601b6978f0b90c55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:subnet/subnet-0928ef52d1a8c1427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0928ef52d1a8c1427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178795995292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-1",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:subnet/subnet-0b64ae3fc8fcf188a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64ae3fc8fcf188a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178795995292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-2",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:subnet/subnet-0b3d3971453ab5de6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3d3971453ab5de6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "178795995292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-private-3",
              "Type": "Private"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-private-3",
              "Type": "Private"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:subnet/subnet-09e7f8b5eb0d9a230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e7f8b5eb0d9a230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "178795995292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:subnet/subnet-0196f65f292f46f6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0196f65f292f46f6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "178795995292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:subnet/subnet-0601b6978f0b90c55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0601b6978f0b90c55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "178795995292",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lesson-5-vpc-public-3",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lesson-5-vpc-public-3",
              "Type": "Public"
            },
            "vpc_id": "vpc-0ad36db5dea286b85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:178795995292:vpc/vpc-0ad36db5dea286b85",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0190e39228e0306a1",
            "default_route_table_id": "rtb-060455990da5bb361",
            "default_security_group_id": "sg-0eedc2ce40d5c1560",
            "dhcp_options_id": "dopt-067de81a55afc9d4c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad36db5dea286b85",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060455990da5bb361",
            "owner_id": "178795995292",
            "tags": {
              "Name": "lesson-5-vpc"
            },
            "tags_all": {
              "Name": "lesson-5-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}